added the remaining sections

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -71,6 +71,38 @@
     background: #808080;
 }
 
+#r9 {  
+	background: #cdcdcd;  
+	float: center;  
+	width: 100px;  
+	height:30px;
+	background: #808080;
+}
+
+#r10 {  
+	background: #cdcdcd;  
+	float: center;  
+	width: 100px;  
+	height:30px;
+	background: #808080;
+}
+
+#r11 {  
+	background: #cdcdcd;  
+	float: center;  
+	width: 100px;  
+	height:30px;
+	background: #808080;
+}
+
+#r12 {  
+	background: #cdcdcd;  
+	float: center;  
+	width: 100px;  
+	height:30px;
+	background: #808080;
+}
+
 #sidebar {  
     float: left;  
     width: 150px;  
