--- a/app/views/hashtags/index.html.erb
+++ b/app/views/hashtags/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Listing hashtags</h1>
 
+<%= form_tag(update_tweets_path) do -%>
+  <div align='center'><%= submit_tag 'Update Tweets' %></div>
+<% end -%>
 <table>
   <tr>
     <th>Name</th>
