--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,6 @@
 <div id="wrapper">
 	<div id="header"> 
-		<!-- <%= form_tag(update_tweets_path) do -%>
-		  <div align='right'><%= submit_tag 'Update Tweets' %></div>
 		  <span id="clear"><div style="position:relative;left:450px;top:120px"><%= submit_tag 'Clear Tags' %></div></span>
-		<% end -%> -->
 		<h1 style="position:relative;left:20px;top:30px"><font face="arial">infravironment</font></h1>
 			<p style="position:relative;left:220px;top:5px"><font face="arial" size="1">Trademark</font></p>
 		<font face="arial"><div style="position:relative;left:20px">Building Life Cycle Site</div></font>
@@ -22,11 +19,11 @@
 		<span id='five'><div id="r5"></div></span></br>
 		<span id='six'><div id="r6" style="position:relative;top:5px"></div></span></br>
 		<span id='seven'><div id="r7"></div></span></br>
-		<span id='eight'><div id="r8"></div></span></br>
+		<span id='eight'><div id="r8" style="position:relative;top:-15px"></div></span></br>
 		<span id='nine'><div id="r9"></div></span></br>
-		<span id='ten'><div id="r10"></div></span></br>
+		<span id='ten'><div id="r10" style="position:relative;top:-15px"></div></span></br>
 		<span id='eleven'><div id="r11"></div></span></br>
-		<span id='twelve'><div id="r12"></div></span></br>
+		<span id='twelve'><div id="r12" style="position:relative;top:-15px"></div></span></br>
 	</div>
 
 	<div id="content">
@@ -59,7 +56,25 @@ $("span#one").hover(
 	$("div#tweets5").hide('fast', function() {
 		// Animation complete.
 	$("div#tweets6").hide('fast', function() {
-					// Animation complete.
+	    // Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+			    $("div#tweets10").hide('fast', function() {
+				   // Animation complete.
+					    $("div#tweets11").hide('fast', function() {
+						   // Animation complete.
+								    $("div#tweets12").hide('fast', function() {
+									   // Animation complete.
+								});
+					});
+			});
+		});
+	});
+	});
 	});
   	});	
   	});
@@ -84,6 +99,24 @@ $("span#two").hover(
 		// Animation complete.
 	$("div#tweets6").hide('fast', function() {
 		// Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+	    $("div#tweets8").hide('fast', function() {
+		   // Animation complete.
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+					    $("div#tweets10").hide('fast', function() {
+						   // Animation complete.
+								    $("div#tweets11").hide('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").hide('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
 	});
   	});
   	});				
@@ -108,6 +141,24 @@ $("span#three").hover(
 		// Animation complete.
 	$("div#tweets6").hide('fast', function() {
 		// Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").hide('fast', function() {
+					   // Animation complete.	
+								    $("div#tweets11").hide('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").hide('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
 	});
   	});
   	});				
@@ -132,6 +183,24 @@ $("span#four").hover(
 		// Animation complete.  
 	$("div#tweets6").hide('fast', function() {
 		// Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").hide('fast', function() {
+					   // Animation complete.	
+								    $("div#tweets11").hide('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").hide('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
 	});
   	});
 	});				
@@ -156,7 +225,25 @@ $("span#five").hover(
 	$("div#tweets5").show('fast', function() {
 		// Animation complete.  
 	$("div#tweets6").hide('fast', function() {
-				// Animation complete.
+		// Animation complete.
+	$("div#tweets7").hide('fast', function() {
+	    // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+		// Animation complete.
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").hide('fast', function() {
+					   // Animation complete.	
+								    $("div#tweets11").hide('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").hide('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
 	});
   	});
 	});				
@@ -182,6 +269,276 @@ $("span#six").hover(
 		// Animation complete.
 	$("div#tweets6").show('fast', function() {
 		// Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").hide('fast', function() {
+					   // Animation complete.	
+								    $("div#tweets11").hide('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").hide('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
+  	});
+  	});				
+  	});
+  	});
+  	});
+	});
+});
+</script>
+
+<script>
+$("span#seven").hover(
+  function () {
+    $("div#tweets1").hide('fast', function() {
+	    // Animation complete.
+	$("div#tweets2").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets3").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets4").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets5").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+    $("div#tweets7").show('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").hide('fast', function() {
+					   // Animation complete.	
+								    $("div#tweets11").hide('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").hide('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
+  	});
+  	});				
+  	});
+  	});
+  	});
+	});
+});
+</script>
+
+<script>
+$("span#eight").hover(
+  function () {
+    $("div#tweets1").hide('fast', function() {
+	    // Animation complete.
+	$("div#tweets2").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets3").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets4").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets5").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").show('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").hide('fast', function() {
+					   // Animation complete.	
+								    $("div#tweets11").hide('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").hide('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
+  	});
+  	});				
+  	});
+  	});
+  	});
+	});
+});
+</script>
+
+<script>
+$("span#nine").hover(
+  function () {
+    $("div#tweets1").hide('fast', function() {
+	    // Animation complete.
+	$("div#tweets2").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets3").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets4").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets5").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").show('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").hide('fast', function() {
+					   // Animation complete.	
+								    $("div#tweets11").hide('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").hide('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
+  	});
+  	});				
+  	});
+  	});
+  	});
+	});
+});
+</script>
+
+<script>
+$("span#ten").hover(
+  function () {
+    $("div#tweets1").hide('fast', function() {
+	    // Animation complete.
+	$("div#tweets2").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets3").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets4").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets5").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").show('fast', function() {
+					   // Animation complete.	
+								    $("div#tweets11").hide('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").hide('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
+  	});
+  	});				
+  	});
+  	});
+  	});
+	});
+});
+</script>
+
+<script>
+$("span#eleven").hover(
+  function () {
+    $("div#tweets1").hide('fast', function() {
+	    // Animation complete.
+	$("div#tweets2").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets3").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets4").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets5").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").hide('fast', function() {
+					   // Animation complete.	
+								    $("div#tweets11").show('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").hide('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
+  	});
+  	});				
+  	});
+  	});
+  	});
+	});
+});
+</script>
+
+<script>
+$("span#twelve").hover(
+  function () {
+    $("div#tweets1").hide('fast', function() {
+	    // Animation complete.
+	$("div#tweets2").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets3").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets4").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets5").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").hide('fast', function() {
+					   // Animation complete.	
+								    $("div#tweets11").hide('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").show('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
   	});
   	});				
   	});
@@ -206,6 +563,24 @@ $("span#clear").hover(
 		// Animation complete.
 	$("div#tweets6").hide('fast', function() {
 		// Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").hide('fast', function() {
+					   // Animation complete.
+									    $("div#tweets11").hide('fast', function() {
+										   // Animation complete.
+													    $("div#tweets12").hide('fast', function() {
+														   // Animation complete.
+													});
+						});
+				});
+		});
+	});
+	});
   	});
   	});				
   	});
