--- a/app/views/home/_tweets12.html.erb
+++ b/app/views/home/_tweets12.html.erb
@@ -12,3 +12,46 @@
 <% end %>
 </table>
 <hr>
+
+
+<script>
+$("span#twelve").hover(
+  function () {
+    $("div#tweets1").hide('fast', function() {
+	    // Animation complete.
+	$("div#tweets2").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets3").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets4").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets5").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+    $("div#tweets7").hide('fast', function() {
+	   // Animation complete.
+    $("div#tweets8").hide('fast', function() {
+	   // Animation complete.	
+		    $("div#tweets9").hide('fast', function() {
+			   // Animation complete.
+				    $("div#tweets10").hide('fast', function() {
+					   // Animation complete.	
+								    $("div#tweets11").hide('fast', function() {
+									   // Animation complete.
+												    $("div#tweets12").show('fast', function() {
+													   // Animation complete.
+												});
+					});
+				});
+		});
+	});
+	});
+  	});
+  	});				
+  	});
+  	});
+  	});
+	});
+});
+</script>
