--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,18 +13,18 @@
 
 	
 	<div id="sidebar">
-		<span id='one'><div id="r1"></div></span></br>
-		<span id='two'><div id="r2" style="position:relative;top:-15px"></div></span></br>
-		<span id='three'><div id="r3"></div></span></br>
-		<span id='four'><div id="r4" style="position:relative;top:-15px"></div></span></br>
-		<span id='five'><div id="r5"></div></span></br>
-		<span id='six'><div id="r6" style="position:relative;top:5px"></div></span></br>
-		<span id='seven'><div id="r7"></div></span></br>
-		<span id='eight'><div id="r8" style="position:relative;top:-15px"></div></span></br>
-		<span id='nine'><div id="r9"></div></span></br>
-		<span id='ten'><div id="r10" style="position:relative;top:-15px"></div></span></br>
-		<span id='eleven'><div id="r11"></div></span></br>
-		<span id='twelve'><div id="r12" style="position:relative;top:-15px"></div></span></br>
+		<span id='one' class="r1"></span></br>
+		<span id='two' class="r2"></span></br>
+		<span id='three' class="r1"></span></br>
+		<span id='four' class="r2"></span></br>
+		<span id='five' class="r1"></span></br>
+		<span id='six' class="r2"></span></br>
+		<span id='seven' class="r1"></span></br>
+		<span id='eight' class="r2"></span></br>
+		<span id='nine' class="r1"></span></br>
+		<span id='ten' class="r2"></span></br>
+		<span id='eleven' class="r1"></span></br>
+		<span id='twelve' class="r2"></span></br>
 	</div>
 
 	<div id="content">
