--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,5 @@
 <div id="wrapper">
 	<div id="header">
-		<span style="position:absolute;top:850px"><%= link_to 'Login', new_session_path %></span> | <span><%= if admin? == true then link_to "Hashtags", hashtags_path end %></span> | <span><%= if admin? == true then link_to "Logout", logout_path end %></span>
 		  <span id="clear"style="position:relative;left:450px;top:120px"><%= submit_tag 'Clear Tags' %></span>
 		<h1 style="position:relative;left:20px;top:30px"><font face="arial">infravironment</font></h1>
 			<p style="position:relative;left:220px;top:5px"><font face="arial" size="1">Trademark</font></p>
@@ -40,50 +39,14 @@
 		<div id='tweets10' style="display:none"><%= render :partial => 'tweets10' %></div>
 		<div id='tweets11' style="display:none"><%= render :partial => 'tweets11' %></div>
 		<div id='tweets12' style="display:none"><%= render :partial => 'tweets12' %></div>
+		<div id='clear'><%= render :partial => 'clear' %></div>
+		<div id='creds'>
+			<span><%= link_to 'Login', new_session_path %></span> 
+			<% if admin? == true then %>
+			<div>
+				<span><%= link_to "Hashtags", hashtags_path %></span> | <span><%= link_to "Logout", logout_path %></span>
+	    	</div>
+			<% end %>
+		</div>
 	</div>
 </wrapper>
-
-
-
-
-<script>
-$("span#clear").hover(
-  function () {
-    $("div#tweets1").hide('fast', function() {
-	    // Animation complete.
-	$("div#tweets2").hide('fast', function() {
-		// Animation complete.
-	$("div#tweets3").hide('fast', function() {
-		// Animation complete.
-	$("div#tweets4").hide('fast', function() {
-		// Animation complete.
-	$("div#tweets5").hide('fast', function() {
-		// Animation complete.
-	$("div#tweets6").hide('fast', function() {
-		// Animation complete.
-    $("div#tweets7").hide('fast', function() {
-	   // Animation complete.
-    $("div#tweets8").hide('fast', function() {
-	   // Animation complete.	
-		    $("div#tweets9").hide('fast', function() {
-			   // Animation complete.
-				    $("div#tweets10").hide('fast', function() {
-					   // Animation complete.
-									    $("div#tweets11").hide('fast', function() {
-										   // Animation complete.
-													    $("div#tweets12").hide('fast', function() {
-														   // Animation complete.
-													});
-						});
-				});
-		});
-	});
-	});
-  	});
-  	});				
-  	});
-  	});
-  	});
-	});
-});
-</script>
