--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,9 @@
 <div id="wrapper">
-	<div id="header">
-		  <span id="clear"style="position:relative;left:450px;top:120px"><%= submit_tag 'Clear Tags' %></span>
-		<h1 style="position:relative;left:20px;top:30px"><font face="arial">infravironment</font></h1>
-			<p style="position:relative;left:220px;top:5px"><font face="arial" size="1">Trademark</font></p>
-		<font face="arial"><div style="position:relative;left:20px">Building Life Cycle Site</div></font>
-		<hr>
+	<div id="header"> 
+	  <%= render :partial => 'header' %>	
 	</div>
 	<p style="position:absolute;top:700px;left:120px"><font face="arial" size="1">Disclaimer: Use constitutes acceptance that the owner of this site cannot guarantee and shall under no circumstances be held responsible for the local recombination </br> of any request, cache, password, readout, email, policy, input, file, identity, service, download, agreement, tracking, session, product, logon, or chat that is transmitted in packets.</font></p>
-
-	<p style="position:absolute;left:220px;top:800px"><font face="arial" size="1">C Eric D. 2011</font></p>
+    <p style="position:absolute;left:220px;top:800px"><font face="arial" size="1">C Eric D. 2011</font></p>
 
 	
 	<div id="sidebar">
@@ -39,14 +34,6 @@
 		<div id='tweets10' style="display:none"><%= render :partial => 'tweets10' %></div>
 		<div id='tweets11' style="display:none"><%= render :partial => 'tweets11' %></div>
 		<div id='tweets12' style="display:none"><%= render :partial => 'tweets12' %></div>
-		<div id='clear'><%= render :partial => 'clear' %></div>
-		<div id='creds'>
-			<span><%= link_to 'Login', new_session_path %></span> 
-			<% if admin? == true then %>
-			<div>
-				<span><%= link_to "Hashtags", hashtags_path %></span> | <span><%= link_to "Logout", logout_path %></span>
-	    	</div>
-			<% end %>
-		</div>
+		<div id='creds'><%= render :partial => 'creds' %></div>
 	</div>
 </wrapper>
