--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eco1</title>
+  <title>arkhisocial</title>
   <%= stylesheet_link_tag "home" %>
   <%= javascript_include_tag "jquery" %>
   <%= csrf_meta_tags %>
