--- a/app/views/home/_creds.html.erb
+++ b/app/views/home/_creds.html.erb
@@ -1,8 +1,9 @@
-<span><%= link_to 'Login', new_session_path %></span> <span id="clear"><%= submit_tag 'Clear Tags' %></span>
-<% if admin? == true then %>
+<% if current_user then %>
   <div>
-	<span><%= link_to "Hashtags", hashtags_path %></span> | <span><%= link_to "Logout", logout_path %></span>
+	<span id="clear"><%= submit_tag 'Clear Tags' %></span> <span><%= link_to "Hashtags", hashtags_path %></span> | <span><%= link_to "Logout", logout_path %></span>
   </div>
+<% else %>
+<span id="clear"><%= submit_tag 'Clear Tags' %></span> <span><%= link_to 'Login', new_session_path %></span>
 <% end %>
 
 <script>
