--- a/app/views/home/_creds.html.erb
+++ b/app/views/home/_creds.html.erb
@@ -1,9 +1,12 @@
 <% if current_user then %>
   <div>
-	<span id="clear"><%= submit_tag 'Clear Tags' %></span> <span><%= link_to "Hashtags", hashtags_path %></span> | <span><%= link_to "Logout", logout_path %></span>
+	</p>
+	<span id="clear"><%= submit_tag 'Clear Tags' %></span> <span><%= link_to "Hashtags", hashtags_path %></span> | <span><%= link_to "Logout", logout_path %></span></br></br></br>
+	<p id="notice"><%= notice %><span align='right'><%= current_user.email %></span></p>
   </div>
 <% else %>
-<span id="clear"><%= submit_tag 'Clear Tags' %></span> <span><%= link_to 'Login', new_session_path %></span>
+<p id="notice"><%= notice %></p>
+<span id="clear"><%= submit_tag 'Clear Tags' %></span> <span><%= link_to 'Login', new_session_path %></span> | <span><%= link_to 'Signup', signup_path %>
 <% end %>
 
 <script>
