--- a/app/views/hashtags/index.html.erb
+++ b/app/views/hashtags/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= link_to 'Home', home_index_path %></h1>
+<h1><%= link_to 'infravironment', home_index_path %></h1>
 
 
 <% if current_user then %>
