--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>arkhisocial</title>
-  <%= stylesheet_link_tag "home" %>
+  <%= stylesheet_link_tag "home", "users" %>
   <%= javascript_include_tag "jquery" %>
   <%= csrf_meta_tags %>
 </head>
