--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -2,3 +2,11 @@
 	<p style="position:relative;left:220px;top:5px"><font face="arial" size="1">Trademark</font></p>
 <font face="arial"><div style="position:relative;left:20px">Green Reference Site</div></font>
 <hr>
+
+<script>
+$(window).load(function () {
+    $("div#nav").fadeIn('slow', function() {
+	    // Animation complete.
+	  	});
+});
+</script>
