adding email tooltip

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>arkhisocial</title>
   <%= stylesheet_link_tag "home", "users" %>
-  <%= javascript_include_tag "jquery" %>
+  <%= javascript_include_tag "jquery", "jquery-qtip" %>
   <%= csrf_meta_tags %>
 </head>
 <script type="text/javascript">
