--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,6 +1,6 @@
 <h1 style="position:relative;left:20px;top:30px"><font face="arial"><%= link_to 'infravironment', root_path %></font></h1>
 	<p style="position:relative;left:220px;top:5px"><font face="arial" size="1">Trademark</font></p>
-<font face="arial"><div style="position:relative;left:20px">Green Reference Site</div></font>
+<font face="arial"><div id='slogan' style="position:relative;left:20px">Green Reference Site</div></font>
 <hr>
 
 <script>
@@ -8,5 +8,28 @@ $(window).load(function () {
     $("div#nav").fadeIn('slow', function() {
 	    // Animation complete.
 	  	});
+});
+</script>
+
+<script type="text/javascript">
+// Only create tooltips when document is ready
+$(document).ready(function()
+{
+   // Use the each() method to gain access to each of the elements attributes
+   $('div#slogan').each(function()
+   {
+      $(this).qtip(
+      {
+         content: '<a href="mailto:infravironment@gmail.com?Subject=Feedback">infravironment@gmail.com</a>', // Give it some content
+         position: 'topLeft', // Set its position
+         hide: {
+            fixed: true // Make it fixed so it can be hovered over
+         },
+         style: {
+            padding: '11px 15px', // Give it some extra padding
+            name: 'light' // And style it with the preset dark theme
+         }
+      });
+   });
 });
 </script>
