--- a/app/views/home/_tweets1.html.erb
+++ b/app/views/home/_tweets1.html.erb
@@ -13,9 +13,13 @@
 </table>
 <hr>
 
-<p class='text'>#### HALO TEXT 1 ####</p>
-
+<% if current_user %>
+  <p class='text-green'>#### HALO TEXT 1 ####</p>
+<% else %>
+  <p class='text-red'>Signup To View Comments ( <%= link_to 'Click Here', signup_path %> )</p>
+<% end %>
 <script>
+
 $("span#one").hover(
   function () {
     $("div#tweets1").show('fast', function() {
