--- a/app/views/home/_tweets12.html.erb
+++ b/app/views/home/_tweets12.html.erb
@@ -13,7 +13,11 @@
 </table>
 <hr>
 
+<% if current_user %>
 <p class='text'>#### HALO TEXT 12 ####</p>
+<% else %>
+  <p class='text-red'>Signup To View Comments ( <%= link_to 'Click Here', signup_path %> )</p>
+<% end %>
 
 <script>
 $("span#twelve").hover(
