--- a/app/views/home/_tweets9.html.erb
+++ b/app/views/home/_tweets9.html.erb
@@ -14,7 +14,7 @@
 <hr>
 
 <% if current_user %>
-<p class='text'>#### HALO TEXT 9 ####</p>
+<p class='text-green'>#### HALO TEXT 9 ####</p>
 <% else %>
   <p class='text-red'>Signup To View Comments ( <%= link_to 'Click Here', signup_path %> )</p>
 <% end %>
