--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -49,6 +49,10 @@ color:#000000;
 
 #creds {
 	float: right;
+	padding-right:1em;
+	padding-left:1em;
+	padding-top:1em;
+	background:#CCFFCC;
 }
 
 p.text-green {
