--- a/app/views/home/_creds.html.erb
+++ b/app/views/home/_creds.html.erb
@@ -8,6 +8,8 @@
 <% end %>
 </div>
 
+<%= link_to (image_tag 'office.png', :height => '100', :width => '100', :class => "header_image"), root_path %>
+
 <script>
 $("span#clear").hover(
   function () {
