--- a/app/views/home/_tweets1.html.erb
+++ b/app/views/home/_tweets1.html.erb
@@ -14,7 +14,7 @@
 <hr>
 
 <% if current_user %>
-  <p class='text-green'>#### HALO TEXT 1 ####</p>
+  <p class='text-green'><font face="arial">Grand-scale construction projects that are underway right now in the </br> United States of America seem to be mostly office buildings. -eD</font></p>
 <% else %>
   <p class='text-red'>Signup To View Comments ( <%= link_to 'Click Here', signup_path %> )</p>
 <% end %>
