--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
 <div id='creds'><%= render :partial => 'creds' %></div>
 <div id="wrapper">
 
-	<p style="position:absolute;top:700px;left:120px"><font face="arial" size="1">Disclaimer: Use constitutes acceptance that the owner of this site cannot guarantee and shall under no circumstances be held responsible for the local recombination </br> of any request, cache, password, readout, email, policy, input, file, identity, service, download, agreement, tracking, session, product, logon, or chat that is transmitted in packets.</font></p>
-    <p style="position:absolute;left:220px;top:800px"><font face="arial" size="1">C Eric D. 2011</font></p>
+	<p style="position:absolute;top:650px;left:30px"><font face="arial" size="1">Disclaimer: Use </br> constitutes acceptance that </br> the owner of this site cannot </br> guarantee and shall under </br> no circumstances be held </br> responsible for the local </br> recombination of any request, </br> cache, password, readout, </br> email, policy, input, </br> file, identity, service, </br> download, agreement, tracking, </br> session, product, logon, </br> or chat that is </br> transmitted in packets.</font></p>
+    <p style="position:absolute;left:30px;top:1100px"><font face="arial" size="1">C Eric D. 2011</font></p>
 
 	
 	<div id="sidebar">
