changed signup verbage

--- a/app/views/home/_tweets3.html.erb
+++ b/app/views/home/_tweets3.html.erb
@@ -16,7 +16,7 @@
 <% if current_user %>
 <p class='text-green'>#### HALO TEXT 3 ####</p>
 <% else %>
-  <p class='text-red'>Signup To View Comments ( <%= link_to 'Click Here', signup_path %> )</p>
+  <p class='text-red'>Signup to view comments</p>
 <% end %>
 
 <script>
