--- a/app/views/home/_tweets5.html.erb
+++ b/app/views/home/_tweets5.html.erb
@@ -16,7 +16,7 @@
 <% if current_user %>
 <p class='text-green'><font face="arial">I'm not going to say don't turn the leadership of any spending on rebuilding over to Architects. -eD</font></p>
 <% else %>
-  <p class='text-red'>Signup To View Comments ( <%= link_to 'Click Here', signup_path %> )</p>
+  <p class='text-red'>Signup to view comments</p>
 <% end %>
 
 <script>
