--- a/app/views/home/_tweets10.html.erb
+++ b/app/views/home/_tweets10.html.erb
@@ -14,7 +14,7 @@
 <hr>
 
 <% if current_user %>
-<p class='text-green'>#### HALO TEXT 10 ####</p>
+<p class='text-green'>Sanctify Wall St. -eD</p>
 <% else %>
   <p class='text-red'>Signup to view comments</p>
 <% end %>
