--- a/app/views/home/_tweets11.html.erb
+++ b/app/views/home/_tweets11.html.erb
@@ -14,7 +14,7 @@
 <hr>
 
 <% if current_user %>
-<p class='text-green'> HALO TEXT 11 </p>
+<p class='text-green'>/disruptive_stability/quality</p>
 <% else %>
   <p class='text-red'>Signup to view comments</p>
 <% end %>
