--- a/app/views/home/_tweets12.html.erb
+++ b/app/views/home/_tweets12.html.erb
@@ -14,7 +14,7 @@
 <hr>
 
 <% if current_user %>
-<p class='text-green'>#### HALO TEXT 12 ####</p>
+<p class='text-green'>/disruptive_stability/certification</p>
 <% else %>
   <p class='text-red'>Signup to view comments</p>
 <% end %>
