--- a/app/views/home/_tweets7.html.erb
+++ b/app/views/home/_tweets7.html.erb
@@ -14,7 +14,7 @@
 <hr>
 
 <% if current_user %>
-<p class='text-green'><font face="arial">/disruptive_stability/integration<h6 align="right">Industry title from: NAICS 2007 sectors; Wikipedia</h6></p>
+<p class='text-green'><font face="arial">/disruptive_stability/integration</p>
 <% else %>
   <p class='text-red'>Signup to view comments</p>
 <% end %>
