--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -1,4 +1,16 @@
-#creds {
-	float: left;
+#mobile_header {
+	float: center;
+	text-align: center;
 	padding-right:1em;
+	text-shadow: #DDD 10px 10px 2px;
+	font-size:50px;
+	border: 10px solid gray;
+}
+
+#mobile_tweets {
+	padding-top:1em;
+	float: center;
+	text-align: center;
+	padding-right:1em;
+	font-size:50px;
 }
