--- a/app/views/home/index.mobile.erb
+++ b/app/views/home/index.mobile.erb
@@ -1,35 +1,18 @@
-<% if mobile_device? %> 
-	<%= link_to "Full Site", :mobile => 0 %> 
-<% else %> 
-	<%= link_to "Mobile Site", :mobile => 1 %> 
-<% end %>
+<aside id="mobile_header">
+
 <h1>INFRAVIRONMENT</h1><h3>(MOBILE)</h3>
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-  </tr>
+</aside>
+<aside id="mobile_tweets">
 <% @tweets1.each do |tweet| %>
-  <tr>
-	<td>~</td>
-	<td id="clickme">#<a href="http://twitter.com/#!/search/realtime/%23<%= tweet.label %>" target="new"><%= tweet.label %></a></td>
-    <td><%= tweet.tweet %></td>
-  </tr>
-<% end %>
-</table>
 
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-  </tr>
-<% @tweets2.each do |tweet| %>
-  <tr>
-	<td>~</td>
-	<td id="clickme">#<a href="http://twitter.com/#!/search/realtime/%23<%= tweet.label %>" target="new"><%= tweet.label %></a></td>
-    <td><%= tweet.tweet %></td>
-  </tr>
+	#<a href="http://twitter.com/#!/search/realtime/%23<%= tweet.label %>" target="new"><%= tweet.label %></a></br>
+    <%= tweet.tweet %></br></br></br>
 <% end %>
-</table>
-
+</aside>
 	
+	
+	<% if mobile_device? %> 
+		<%= link_to "Full Site", :mobile => 0 %> 
+	<% else %> 
+		<%= link_to "Mobile Site", :mobile => 1 %> 
+	<% end %>
