--- a/app/views/home/index.mobile.erb
+++ b/app/views/home/index.mobile.erb
@@ -6,7 +6,7 @@
 <% @all_tweets.each do |tweet| %>
 
 	#<a href="http://twitter.com/#!/search/realtime/%23<%= tweet.label %>" target="new"><%= tweet.label %></a></br>
-    <%= tweet.tweet %></br></br></br>
+    <%= tweet.tweet %></br></br><hr/></br>
 <% end %>
 </aside>
 
