--- a/app/views/home/index.mobile.erb
+++ b/app/views/home/index.mobile.erb
@@ -2,6 +2,9 @@
 
 <h1>INFRAVIRONMENT</h1><h3>(MOBILE)</h3>
 </header>
+<aside class="remoduvate">
+<h3>visit <a href="http://remoduvate.com/">remoduvate.com</a></h3>
+</aside>
 <aside class="mobile_tweets">
 <% @all_tweets.each do |tweet| %>
 
