--- a/app/views/home/index.mobile.erb
+++ b/app/views/home/index.mobile.erb
@@ -3,11 +3,10 @@
 <h1>INFRAVIRONMENT</h1><h3>(MOBILE)</h3>
 </header>
 <aside class="remoduvate">
-<h3>visit <a href="http://remoduvate.com/">remoduvate.com</a></h3>
+<h3>visit <a href="https://twitter.com/remoduvate/">remoduvate.com</a></h3>
 </aside>
 <aside class="mobile_tweets">
 <% @all_tweets.each do |tweet| %>
-
 	#<a href="http://twitter.com/#!/search/realtime/%23<%= tweet.label %>" target="new"><%= tweet.label %></a></br>
     <%= tweet.tweet %></br></br><hr/></br>
 <% end %>
