--- a/app/views/home/index.mobile.erb
+++ b/app/views/home/index.mobile.erb
@@ -3,7 +3,8 @@
 <h1>INFRAVIRONMENT</h1><h3>(MOBILE)</h3>
 </header>
 <aside class="remoduvate">
-<h3>visit <a href="https://twitter.com/remoduvate/">remoduvate.com</a></h3>
+<h3>visit <a href="https://twitter.com/remoduvate/">remoduvate</a></h3>
+<iframe width="280" height="215" src="http://www.youtube.com/embed/BLzVNjED2yg" frameborder="0" allowfullscreen></iframe>
 </aside>
 <aside class="mobile_tweets">
 <% @all_tweets.each do |tweet| %>
@@ -13,7 +14,6 @@
 </aside>
 <footer class="footer">
 <%= link_to (image_tag 'office.png', :height => '70', :width => '70', :class => "header_image"), root_path %><br/>
-
 
 
 	<% if mobile_device? %> 
