--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,6 +1,6 @@
 <h1 style="position:relative;left:20px;top:30px"><font face="arial"><%= link_to 'infravironment', root_path %></font></h1>
 	<p style="position:relative;left:220px;top:5px"><font face="arial" size="1">Trademark</font></p>
-<font face="arial"><div id='slogan' style="position:relative;left:20px">Manage your architectural services here to reduce project cost.</div></font>
+<font face="arial"><div id='slogan' style="position:relative;left:20px">I'm Eric Downie AIA.  E-mail me to make disruptive stability part of your next sustainable building project.</div></font>
 
 <script>
 $(window).load(function () {
