--- a/app/views/remoduvate/index.html.erb
+++ b/app/views/remoduvate/index.html.erb
@@ -1,11 +1,12 @@
 
-<p style="position:absolute;left:30px;top:200px"><font face="arial" size="2">Your links to share about your building project:</font></p>
+<p style="position:absolute;left:30px;top:200px"><font face="arial" size="2">Your links to share about your remodeling project:</font></p>
 
 
 	<a style="position:absolute;top:300px;left:30px" href="http://www.linkedin.com/home">renovatedin</a>
 	<a style="position:absolute;top:300px;left:180px" href="https://twitter.com/">tweemodel</a>
 	<a style="position:absolute;top:300px;left:380px" href="http://www.facebook.com/">refacenovate</a>
 	<a style="position:absolute;top:300px;left:580px" href="https://plus.google.com/">moduplus</a>
+	<a style="position:absolute;top:350px;left:100px" href="http://yfrog.com/">rymodel</a>
 	
 	
 	
