adding jmobile layout

--- a/app/views/home/index.mobile.erb
+++ b/app/views/home/index.mobile.erb
@@ -3,7 +3,7 @@
 <h1>INFRAVIRONMENT</h1><h3>(MOBILE)</h3>
 </header>
 <aside class="remoduvate">
-<h3>visit <a href="https://twitter.com/remoduvate/">remoduvate</a></h3>
+<h3><a href="https://twitter.com/remoduvate/" data-role="button" data-icon="">remoduvate</a></h3>
 <iframe width="280" height="215" src="http://www.youtube.com/embed/BLzVNjED2yg" frameborder="0" allowfullscreen></iframe>
 </aside>
 <aside class="mobile_tweets">
