--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -1,9 +1,8 @@
 <html>
   <head>
-    <%= stylesheet_link_tag "/jqtouch/jqtouch.min.css", "/jqtouch/themes/apple/theme.min.css", "mobile" %>
-    <%= javascript_include_tag "/jqtouch/jquery.1.3.2.min.js", "/jqtouch/jqtouch.min.js", "mobile" %>
-   
-  </head>
+    <%= stylesheet_link_tag "mobile", "mobile2" %>
+	<%= javascript_include_tag "jquery", "jquerymobile" %>
+   </head>
   <body>
 <%= yield %>
   </body>
