--- a/app/views/home/index.mobile.erb
+++ b/app/views/home/index.mobile.erb
@@ -8,7 +8,7 @@
 </aside>
 <aside class="mobile_tweets">
 <% @all_tweets.each do |tweet| %>
-	#<a href="http://twitter.com/#!/search/realtime/%23<%= tweet.label %>" target="new"><%= tweet.label %></a></br>
+	<a href="http://twitter.com/#!/search/realtime/%23<%= tweet.label %>" target="new"  data-role="button" data-icon=""><%= tweet.label %></a></br>
     <%= tweet.tweet %></br></br><hr/></br>
 <% end %>
 </aside>
